# MercuryUtils

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yaml
StaticMock/: README.md  StaticMock.h
StaticMock/test/: CMakeLists.txt  MockSleep.h  Sleep.cpp  Sleep.h  testMockedSleep.cpp  testSleep.cpp
